# FactoryPattern

./: CMakeLists.txt  ConcreteFactory.cpp  ConcreteFactory.h  ConcreteProduct.cpp  ConcreteProduct.h  ConcreteProduct2.cpp  ConcreteProduct2.h  Factory.cpp  Factory.h  Product.cpp  Product.h  README.md  main.cpp
